--- a/index.HTML
+++ b/index.HTML
@@ -238,10 +238,11 @@
 
         .footer-links {
             display: flex;
-            justify-content: flex-end;
+            justify-content: space-between;
             align-items: center;
             margin-top: 20px;
             margin-right: 20px;
+            margin-left: 20px;
         }
 
         .footer-link {
@@ -343,10 +344,12 @@
     </div>
 
     <div class="footer-links">
-        <a href="#" class="footer-link">Terms</a>
-        <a href="#" class="footer-link">Contact Us</a>
         <div class="footer-logo">
             <img src="img/logo.svg" alt="Footer Logo">
+        </div>
+        <div>
+            <a href="#" class="footer-link">Terms</a>
+            <a href="#" class="footer-link">Contact Us</a>
         </div>
     </div>
 
