--- a/index.HTML
+++ b/index.HTML
@@ -308,6 +308,12 @@
             .rights-reserved {
                 text-align: right;
             }
+            .footer-links {
+                justify-content: flex-end;
+            }
+            .footer-logo {
+                margin-right: auto;
+            }
         }
     </style>
 </head>
