--- a/index.HTML
+++ b/index.HTML
@@ -219,16 +219,18 @@
     </div>
 
     <div class="footer-container">
-        <div class="footer-table">
-            <div class="footer-table-cell footer-logo">
+    <table class="footer-table">
+        <tr>
+            <td class="footer-logo">
                 <img src="img/logo.svg" alt="Footer Logo">
-            </div>
-            <div class="footer-table-cell footer-links">
+            </td>
+            <td class="footer-links">
                 <a href="#" class="footer-link">Terms</a>
                 <a href="#" class="footer-link">Contact Us</a>
-            </div>
-        </div>
-    </div>
+            </td>
+        </tr>
+    </table>
+</div>
 
     <div class="footer-line"></div>
 
