--- a/index.HTML
+++ b/index.HTML
@@ -12,45 +12,45 @@
             margin: 0;
         }
 
-        /* Adjusted logo size */
-        .footer-logo img {
-            width: 213px;
-            height: auto;
-        }
 
-        /* Footer table styles */
-        .footer-table {
-            display: table;
-            width: 100%;
-        }
+.footer-container {
+    width: 100%;
+    padding: 20px 0;
+    box-sizing: border-box;
+}
 
-        .footer-table-cell {
-            display: table-cell;
-            vertical-align: middle;
-        }
+.footer-table {
+    width: 100%;
+}
 
-        .footer-links {
-            text-align: right;
-        }
+.footer-table td {
+    vertical-align: middle;
+}
 
-        .footer-link {
-            color: rgb(255, 255, 255);
-            font-family: Poppins;
-            font-size: 22px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: 135%;
-            text-decoration: none;
-            cursor: pointer;
-            margin-left: 20px;
-            transition: color 0.3s;
-        }
+.footer-logo img {
+    width: 213px;
+    height: auto;
+}
 
-        .footer-link:hover {
-            color: #0070FE;
-        }
+.footer-links {
+    text-align: right;
+}
 
-        /* Your existing CSS styles */
+.footer-link {
+    color: #ffffff;
+    font-family: Poppins;
+    font-size: 22px;
+    font-weight: 500;
+    text-decoration: none;
+    margin-left: 20px;
+    transition: color 0.3s;
+}
+
+.footer-link:hover {
+    color: #0070FE;
+}
+
+       
         .biggest-text {
             font-family: 'Poppins', sans-serif;
         }
