--- a/index.HTML
+++ b/index.HTML
@@ -88,6 +88,10 @@
             margin-top: 50px;
             margin-bottom: 20px;
         }
+.footer-logo img {
+    width: 213px;
+    height: auto;
+}
 
         .main-logo img {
             max-width: 100%;
@@ -108,7 +112,7 @@
             box-sizing: border-box;
         }
 
-        .footer-logo,
+    
         .footer-links {
             display: table-cell;
             vertical-align: middle;
