--- a/index.HTML
+++ b/index.HTML
@@ -1,4 +1,3 @@
-User
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -51,20 +50,10 @@ User
             color: #0070FE;
         }
 
-        /* Your existing CSS styles */
-        .biggest-text {
-            font-family: 'Poppins', sans-serif;
-        }
-
-        .medium-text {
-            font-family: 'Poppins', sans-serif;
-        }
-
+        /* Button styles */
         .button {
-            display: inline-flex;
+            display: inline-block;
             padding: 15px 60px;
-            justify-content: center;
-            align-items: center;
             border-radius: 10px;
             box-shadow: rgba(0, 112, 254, 0.6) 0px 3px 80px;
             background: rgb(3, 11, 24);
@@ -73,6 +62,21 @@ User
             cursor: pointer;
             text-decoration: none;
             color: white;
+            font-family: 'Poppins', sans-serif;
+            font-size: 22px;
+            transition: background-color 0.3s;
+        }
+
+        .button:hover {
+            background-color: #0070FE;
+        }
+
+        /* Your existing CSS styles */
+        .biggest-text {
+            font-family: 'Poppins', sans-serif;
+        }
+
+        .medium-text {
             font-family: 'Poppins', sans-serif;
         }
 
@@ -252,4 +256,4 @@ User
     </script>
 
 </body>
-</html> 
+</html>
