--- a/index.HTML
+++ b/index.HTML
@@ -290,7 +290,10 @@
         .social-icons img:hover {
             filter: brightness(1.2); /* Increase brightness on hover */
         }
-
+.footer-logo img {
+    max-width: 213px; /* Set the maximum width to 213px */
+    height: auto; /* Allow height to adjust proportionally */
+}
         .rights-reserved {
             text-align: center;
             color: rgb(183, 195, 209);
@@ -311,10 +314,8 @@
             .footer-links {
                 justify-content: flex-end;
             }
-            .footer-logo {
-                margin-right: auto;
-            }
-        }
+       
+
     </style>
 </head>
 <body>
