--- a/index.HTML
+++ b/index.HTML
@@ -290,7 +290,9 @@
         .social-icons img:hover {
             filter: brightness(1.2); /* Increase brightness on hover */
         }
-.footer-logo img {
+.footer-logo {
+    margin-right: auto; /* Pushes the footer logo to the left */
+}.footer-logo img {
     max-width: 213px; /* Set the maximum width to 213px */
     height: auto; /* Allow height to adjust proportionally */
 }
