--- a/index.HTML
+++ b/index.HTML
@@ -235,16 +235,14 @@
             background-color: #000e24;
             box-shadow: 0 0 4vw #00306f;
         }
-
-  .footer-links {
+.footer-links {
     display: flex;
-    justify-content: space-between; /* Distribute items along the flex line */
+    justify-content: flex-start; /* Align items to the start (left) */
     align-items: center;
     margin-top: 20px;
     margin-right: 20px;
     margin-left: 20px;
 }
-
         .footer-link {
             color: rgb(255, 255, 255);
             text-align: center;
