--- a/index.HTML
+++ b/index.HTML
@@ -290,8 +290,9 @@
 .footer-logo {
     margin-right: auto; /* Pushes the footer logo to the left */
 }
-}.footer-logo img {
-    max-width: 213px; /* Set the maximum width to 213px */
+.footer-logo img {
+    max-width: 100%; /* Set the maximum width to 100% */
+    width: 213px; /* Set a fixed width of 213px */
     height: auto; /* Allow height to adjust proportionally */
 }
    .rights-reserved {
