--- a/index.HTML
+++ b/index.HTML
@@ -109,16 +109,16 @@
             height: auto; /* Allow the container to adjust its height based on content */
         }
 
-        .background-video {
-            width: auto;
-            height: 80vh;
-            max-width: none;
-            max-height: none;
-            object-fit: cover;
-            opacity: 0.3;
-            display: block;
-            margin: 0 auto;
-        }
+       .background-video {
+    width: 100%; /* Set width to 100% */
+    height: auto; /* Allow height to adjust proportionally */
+    max-width: none;
+    max-height: none;
+    object-fit: cover;
+    opacity: 0.3;
+    display: block;
+    margin: 0 auto;
+}
 
         .text {
             color: rgb(202, 225, 255);
