--- a/index.HTML
+++ b/index.HTML
@@ -109,10 +109,10 @@
             height: auto; /* Allow the container to adjust its height based on content */
         }
 
-       .background-video {
+ .background-video {
     width: 100%; /* Set width to 100% */
     height: auto; /* Allow height to adjust proportionally */
-    max-width: none;
+    max-width: 100%; /* Set max-width to 100% */
     max-height: none;
     object-fit: cover;
     opacity: 0.3;
