--- a/index.HTML
+++ b/index.HTML
@@ -53,12 +53,13 @@
         }
 
         /* Container */
-  .container {
+ .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    max-width: 90%; /* Set maximum width to prevent overflowing the screen */
+    margin: 0 auto; /* Center the container horizontally */
+    width: 90%; /* Set width to 90% of the viewport */
+    max-width: 800px; /* Set maximum width to prevent overflowing */
     padding: 10px;
     overflow: hidden;
     position: relative;
